<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_frame_satu">

        <!--Pulau Sumatera-->
        <LinearLayout
            android:id="@+id/judulSatu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/pulau_sumatera"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hasilSatu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/judulSatu"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSumatera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Pulau Kalimantan-->
        <LinearLayout
            android:id="@+id/judulDua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hasilSatu"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/pulau_kalimantan"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hasilDua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/judulDua"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvKalimantan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Pulau Jawa-->
        <LinearLayout
            android:id="@+id/judulTiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hasilDua"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/pulau_jawa"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hasilTiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/judulTiga"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvJawa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Pulau Sulawesi-->
        <LinearLayout
            android:id="@+id/judulEmpat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hasilTiga"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/pulau_sulawesi"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hasilEmpat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/judulEmpat"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSulawesi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Pulau Maluku-->
        <LinearLayout
            android:id="@+id/judulLima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hasilEmpat"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/pulau_maluku"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hasilLima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/judulLima"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMaluku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Pulau Papua-->
        <LinearLayout
            android:id="@+id/judulEnam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hasilLima"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/pulau_papua"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hasilEnam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/judulEnam"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPapua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>